syntax = "proto3";

package io.radicalbit.nsdb.rpc;

import "google/protobuf/any.proto";

message RPCInsert {
    string namespace = 1;
    string metric = 2;
    int64 timestamp = 3;
    oneof value {
        double decimalValue = 4;
        int64 longValue = 5;
    }
    map<string, Dimension> dimensions = 7;
}

message Dimension {
    oneof value {
        double decimalValue = 1;
        int64 longValue = 2;
        string stringValue = 3;
    }
}
